feat: mobile adjust

--- a/scss/_animate.scss
+++ b/scss/_animate.scss
@@ -63,7 +63,7 @@
 .text-churrasco {
     position: relative;
     font-weight: bold;
-    color: #f1f1f1; /* Cor laranja para simular brasa */
+    color: #eea700; /* Cor laranja para simular brasa */
     text-shadow:
         0 0 10px #ff6347,
         0 0 20px #ff4500,
