--- a/scss/_reset.scss
+++ b/scss/_reset.scss
@@ -15,6 +15,7 @@
     font-family: "Holtwood One SC", serif;
     font-weight: 400;
     font-style: normal;
+    letter-spacing: 2px;
 }
 img {
     max-width: 100%;
@@ -34,5 +35,3 @@ button {
     background-color: transparent;
     cursor: pointer;
 }
-
-
