--- a/scss/_s-contact.scss
+++ b/scss/_s-contact.scss
@@ -39,6 +39,7 @@
         p {
             font-size: 1.6rem;
             margin-top: 12px;
+            margin-bottom: 32px;
         }
 
         &:hover {
