--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -1,5 +1,5 @@
 header {
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     width: 80%;
@@ -9,8 +9,8 @@ header {
 
     display: flex;
     z-index: 12;
-    // border: 1px solid rgba(255, 255, 255, 0.168627451);
-    // background-color: rgba(0, 0, 0, 0.733);
+    border: 1px solid rgba(255, 255, 255, 0.168627451);
+    background-color: rgba(0, 0, 0, 0.733);
     left: 10%;
 
     .container {
@@ -68,6 +68,12 @@ header {
     }
 
     @include responsive(840px) {
+        #logo {
+            h3 {
+                font-size: 2rem;
+            }
+        }
+
         border: 1px solid rgba(255, 255, 255, 0.168627451);
         background-color: rgba(0, 0, 0, 0.733);
         height: 6rem;
@@ -92,7 +98,7 @@ header {
     background: $brand-main-light;
     border-radius: 8px;
     width: 100%;
-    height: 10vh;
+    height: 12vh;
     position: fixed;
     right: 0;
     bottom: 0;
