--- a/scss/_s-service.scss
+++ b/scss/_s-service.scss
@@ -6,21 +6,6 @@
         /* Gradiente escuro */ url("../img/50.jpg") no-repeat center center;
     background-size: cover;
 
-    .js-desconto {
-        font-size: 1.2rem;
-        background-color: red;
-        color: $white;
-        display: inline-flex;
-        padding: 0 1rem;
-        border-radius: 10px;
-    }
-
-    .js-price-old {
-        font-size: 1.2rem;
-        text-decoration: line-through;
-        font-weight: 700;
-    }
-
     .destaque {
         font-weight: 700;
         font-size: 3rem;
@@ -33,6 +18,7 @@
         span {
             font-size: 7rem;
             color: $brand-main;
+            line-height: 100%;
         }
     }
 
@@ -195,7 +181,7 @@
     @include responsive(1200px) {
         &-title {
             span {
-                font-size: 6rem;
+                font-size: 4rem;
             }
         }
 
