--- a/scss/_s-testimonials.scss
+++ b/scss/_s-testimonials.scss
@@ -1,49 +1,33 @@
 .s-testemonial {
+    padding: 90px 0;
     background-color: #10100f;
     position: relative;
+    background-image: url(../img/churrasqueira.png);
+    background-repeat: no-repeat;
+    background-position: 1483px 272px;
     .d-flex {
         align-items: center;
     }
 
-    &__image {
-        position: relative;
-        width: 50%;
-        height: 450px;
-        background-image: url("../img/testemunho.jpg");
-        background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../img/testemunho.webp");
-        background-size: cover;
-        background-position: center;
-
-        h2 {
-            font-size: 15rem;
-            position: absolute;
-            bottom: 30px;
-            left: 0;
-            -webkit-text-stroke-width: 1.2px;
-            -webkit-text-stroke-color: #bbbbbb;
-
-            color: rgb(255 4 4 / 0%);
-            /* opacity: .07; */
-            line-height: 60px;
-        }
+    .slide {
+        background-color: #1d1d1d;
+        padding: 20px;
+        border-radius: 20px;
     }
 
     &__text {
-        width: 50%;
-        padding: 50px 100px 50px 50px;
-        h3 {
-            font-size: 3.5rem;
-            color: $white;
-            margin-bottom: 20px;
-        }
+        width: 100%;
+        padding: 50px 0px 50px 0px;
         p {
             margin-bottom: 15px;
+            color: $white;
         }
     }
 
     .swiper {
         width: 100%;
         height: 100%;
+        padding-bottom: 50px;
     }
 
     .swiper-slide {
@@ -70,6 +54,7 @@
     }
 
     @include responsive($mobile) {
+        background-position: 17px 623px;
         &__image {
             width: 100%;
             height: 200px;
@@ -118,7 +103,7 @@ hr {
 
 .swiper-button-next,
 .swiper-button-prev {
-    top: 95% !important;
+    top: 83% !important;
     padding: 16px;
     border-radius: 50px;
     color: transparent;
