--- a/scss/_buttons.scss
+++ b/scss/_buttons.scss
@@ -24,7 +24,7 @@
 }
 
 .btn-secondary {
-    font-family: "Nunito", sans-serif;
+    font-family: "Noto Sans", serif;
     background-color: rgba(0, 0, 0, 0);
     color: $white;
     transition: all 0.3s ease-in;
