--- a/scss/_titles.scss
+++ b/scss/_titles.scss
@@ -41,7 +41,7 @@ p {
     font-size: 1.8rem;
     line-height: 150%;
     color: $gray-600;
-    font-family: "Nunito", sans-serif;
+    font-family: "Noto Sans", serif;
 }
 .subtitle {
     color: $brand-main;
