--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -51,7 +51,7 @@
             font-weight: 400;
             font-style: normal;
 
-            span{
+            span {
                 font-family: "Holtwood One SC", serif;
                 font-weight: 400;
                 font-style: normal;
@@ -160,6 +160,7 @@
                 display: flex;
                 justify-content: center;
                 flex-direction: row;
+                width: 80%;
             }
 
             .title {
