--- a/scss/_s-about.scss
+++ b/scss/_s-about.scss
@@ -26,7 +26,8 @@
 
         &-title {
             margin-top: 10px;
-            margin-bottom: 50px;
+            margin-bottom: 40px;
+            font-weight: 600;
         }
 
         &-lead {
