feat: real photos

--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -75,7 +75,9 @@ header {
         left: 5%;
         #logo {
             h3 {
-                font-size: 1.8rem;
+                font-size: 1.9rem;
+                font-weight: 700;
+                margin-left: $gutter;
             }
         }
         nav {
