--- a/scss/_s-testimonials.scss
+++ b/scss/_s-testimonials.scss
@@ -2,7 +2,7 @@
     padding: 90px 0;
     background-color: #10100f;
     position: relative;
-    background-image: url(../img/churrasqueira.png);
+    background-image: url(../img/churrasqueira.webp);
     background-repeat: no-repeat;
     background-position: 1483px 272px;
     .d-flex {
