--- a/scss/_common.scss
+++ b/scss/_common.scss
@@ -29,7 +29,7 @@
 }
 
 .color-light {
-    color: $white;
+    color: #f0f0f0;
 }
 
 .text-cancel {
@@ -190,4 +190,3 @@
     margin-top: auto;
     margin-bottom: auto;
 }
-
